--- a/requirements.yaml
+++ b/requirements.yaml
@@ -13,6 +13,7 @@ non-functional:
 implicit:
   - Пользователь должен иметь возможность указать контактные данные.
   - Пользователь должен иметь возможность удалять товары из корзины.
+  - Пользователь должен иметь возможность изменять количество товаров в корзине.
   - Пользователь должен иметь возможность сбрасывать фильтры.
   - Пользователь должен иметь возможность оформить заказ.
   - Пользователь должен иметь возможность вернуться из корзины к списку товаров.
