--- a/requirements.yaml
+++ b/requirements.yaml
@@ -19,3 +19,5 @@ implicit:
   - Пользователь должен иметь возможность вернуться из корзины к списку товаров.
   - При фильтрации по цене должна отсутствовать возможность указывать отрицательные значения.
   - При фильтрации по цене значение "До" должно быть меньше значения "От".
+  - Пользователь должен иметь возможность сменить язык с английского на русский.
+  
