--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,4 +1,20 @@
 - summary: |
+    Авторизация пользователя
+  requirement: |
+    Пользователь должен иметь возможность авторизоваться в системе
+  prerequisites: |
+    Создан пользователь с логином user и паролем password123
+  test-data: |
+    Логин: user
+    Пароль: password123
+  steps:
+    - Перейти к форме авторизации
+    - Ввести логин и пароль
+    - Нажать кнопку "Войти"
+  expected-result: |
+    Пользователь авторизован
+
+- summary: |
     Поиск товаров по ключевому слову
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову
