--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,4 +1,7 @@
 - summary: | 
+    Авторизация пользователя
+  status: fail
+- summary: | 
     Поиск товаров по ключевому слову
   status: pass
 - summary: | 
