--- a/test-cases.yml
+++ b/test-cases.yml
@@ -314,6 +314,8 @@
     Проверка мобильной версии сайта
   requirement: |
     Сайт должен иметь мобильную версию
+  prerequisites: |
+    Открыт сайт магазина.
   test-data: |
     Устройство: iPhone SE
   steps:
@@ -330,6 +332,8 @@
     Проверка доступности сайта на различных устройствах
   requirement: |
     Сайт должен быть доступен на различных устройствах
+  prerequisites: |
+    Открыт сайт магазина.
   test-data: |
     Список устройств: iPhone 12, Samsung Galaxy S21, iPad Pro
   steps:
@@ -346,6 +350,8 @@
     Отображение сайта на русском языке
   requirement: |
     Пользователь должен иметь возможность сменить язык с английского на русский
+  prerequisites: |
+    Открыт сайт магазина.
   test-data: |
     Язык: Русский
   steps:
